src/style.css
@import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");

html {
  background-color: rgb(197, 223, 246);
  display: flex;
  justify-content: center;
  background-color: #ddfcff;
  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpath fill='%23d4faff' d='M486 705.8c-109.3-21.8-223.4-32.2-335.3-19.4C99.5 692.1 49 703 0 719.8V800h843.8c-115.9-33.2-230.8-68.1-347.6-92.2C492.8 707.1 489.4 706.5 486 705.8z'/%3E%3Cpath fill='%23cbf8ff' d='M1600 0H0v719.8c49-16.8 99.5-27.8 150.7-33.5c111.9-12.7 226-2.4 335.3 19.4c3.4 0.7 6.8 1.4 10.2 2c116.8 24 231.7 59 347.6 92.2H1600V0z'/%3E%3Cpath fill='%23c1f5ff' d='M478.4 581c3.2 0.8 6.4 1.7 9.5 2.5c196.2 52.5 388.7 133.5 593.5 176.6c174.2 36.6 349.5 29.2 518.6-10.2V0H0v574.9c52.3-17.6 106.5-27.7 161.1-30.9C268.4 537.4 375.7 554.2 478.4 581z'/%3E%3Cpath fill='%23b8f2ff' d='M0 0v429.4c55.6-18.4 113.5-27.3 171.4-27.7c102.8-0.8 203.2 22.7 299.3 54.5c3 1 5.9 2 8.9 3c183.6 62 365.7 146.1 562.4 192.1c186.7 43.7 376.3 34.4 557.9-12.6V0H0z'/%3E%3Cpath fill='%23AFEFFF' d='M181.8 259.4c98.2 6 191.9 35.2 281.3 72.1c2.8 1.1 5.5 2.3 8.3 3.4c171 71.6 342.7 158.5 531.3 207.7c198.8 51.8 403.4 40.8 597.3-14.8V0H0v283.2C59 263.6 120.6 255.7 181.8 259.4z'/%3E%3Cpath fill='%23b9f9ff' d='M1600 0H0v136.3c62.3-20.9 127.7-27.5 192.2-19.2c93.6 12.1 180.5 47.7 263.3 89.6c2.6 1.3 5.1 2.6 7.7 3.9c158.4 81.1 319.7 170.9 500.3 223.2c210.5 61 430.8 49 636.6-16.6V0z'/%3E%3Cpath fill='%23c3fffd' d='M454.9 86.3C600.7 177 751.6 269.3 924.1 325c208.6 67.4 431.3 60.8 637.9-5.3c12.8-4.1 25.4-8.4 38.1-12.9V0H288.1c56 21.3 108.7 50.6 159.7 82C450.2 83.4 452.5 84.9 454.9 86.3z'/%3E%3Cpath fill='%23ccfff7' d='M1600 0H498c118.1 85.8 243.5 164.5 386.8 216.2c191.8 69.2 400 74.7 595 21.1c40.8-11.2 81.1-25.2 120.3-41.7V0z'/%3E%3Cpath fill='%23d6fff4' d='M1397.5 154.8c47.2-10.6 93.6-25.3 138.6-43.8c21.7-8.9 43-18.8 63.9-29.5V0H643.4c62.9 41.7 129.7 78.2 202.1 107.4C1020.4 178.1 1214.2 196.1 1397.5 154.8z'/%3E%3Cpath fill='%23E0FFF3' d='M1315.3 72.4c75.3-12.6 148.9-37.1 216.8-72.4h-723C966.8 71 1144.7 101 1315.3 72.4z'/%3E%3C/g%3E%3C/svg%3E");
  background-attachment: fixed;
  background-size: cover;
}

* {
  font-family: "Merriweather", serif;
  font-weight: 900;
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  color: #36454f;
  /* border: 1px solid red; */
}

body {
  font-size: 24px;
  margin: 30px;
  padding: 30px;
  background-color: white;
  border: 2px solid grey;
  border-radius: 10px;
  -webkit-box-shadow: 0px 8px 21px -1px rgba(89, 89, 89, 1);
  -moz-box-shadow: 0px 8px 21px -1px rgba(89, 89, 89, 1);
  box-shadow: 0px 8px 21px -1px rgba(89, 89, 89, 1);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  height: 100%;
  width: 90%;
}

header,
#content {
  width: 90%;
}

header {
  display: flex;
  flex-direction: column;
  padding: 30px 50px 30px 50px;
  margin-bottom: 20px;
  border-bottom: 1px solid #36454f;
  justify-content: space-between;
  align-items: center;
  height: max-content;
}

header h1 {
  font-size: 4.5rem;
  margin-bottom: 20px;
}

nav#btns-cont {
  display: flex;
  min-width: 50%;
  justify-content: space-evenly;
  padding: 10px 0px;
}

.nav-btn {
  flex: 1;
  font-size: 1.8rem;
  background-color: transparent;
  border: none;
  border-radius: 10px;
  color: #36454f;
  padding: 10px 30px;
  font-size: clamp(1.5rem, 2.5vw, 2rem);
}

.nav-btn:hover {
  cursor: pointer;
  text-decoration: underline;
}

.nav-btn.selected {
  background-color: rgb(136, 192, 226);
  color: white;
  text-decoration: underline;
}

.about {
  flex: 1;
  padding: 30px 10px;
  height: 100%;
}

footer {
  margin-top: 20px;
  padding: 20px;
  width: 100%;
  text-align: center;
  font-size: clamp(1.2rem, 2.5vw, 1.5rem);
}

footer .credit {
  margin-top: 10px;
  font-size: 1.2rem;
  font-weight: 400;
}

#content.about,
#content.reservation {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 20px 50px;
  gap: 20px;
}

#content.about h1,
#content.reservation h1 {
  padding: 20px;
  font-size: clamp(2rem, 3vw, 3rem);
}

.about-text {
  text-align: center;
  font-weight: 500;
  max-width: 65ch;
  font-size: clamp(1rem, 2.5vw, 1.6rem);
  padding: 20px;
  line-height: 1.5;
}

.gallery {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 50px;
  margin-top: 20px;
}

.gallery img {
  flex: 1;
  width: 80%;
  border-radius: 20px;
}

#content.menu {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 20px;
}

#content.menu h1 {
  font-size: clamp(2rem, 3vw, 3rem);
  font-weight: 600;
  margin: 50px 0px;
}

.menu-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 5px;
}

.menu-item p {
  text-align: center;
}

.menu-item .detail {
  font-weight: 400;
}

#content.menu .separator,
#content.menu .extras {
  font-weight: 400;
  text-align: center;
  line-height: 1.6;
}

#content.menu .extras {
  margin-bottom: 30px;
}

#content.reservation {
  display: flex;
  justify-content: center;
  margin: 20px 50px;
}

#reservation-form {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  padding: 20px;
}

#reservation-form .form-entry {
  display: flex;
  flex-direction: column;
  gap: 10px;
  margin: 10px;
  width: 100%;
}

#reservation-form .form-entry label {
  font-size: clamp(1.2rem, 2.5vw, 1.5rem);
  font-weight: 600;
}

#reservation-form .form-entry input,
#reservation-form .form-entry textarea {
  font-size: 1.3rem;
  padding: 10px 15px;
  font-weight: 500;
  border-radius: 10px;
  /* border: none; */
  outline: none;
  border: 3px solid #36454f;
  width: 100%;
}

#reservation-form .form-entry input::placeholder,
#reservation-form .form-entry textarea::placeholder {
  font-style: italic;
}

.form-entry input:user-invalid {
  box-shadow: 4px 4px 5px 0px rgb(241 6 6);
}

input + span,
select + span {
  position: relative;
}

input:required + span::after,
select:required + span::after {
  content: "*";
  color: red;
  position: absolute;
  top: -90px;
  right: 8px;
}

button[type="submit"] {
  font-size: 1.5rem;
  padding: 20px 20px;
  border-radius: 10px;
  border: none;
  background-color: #36454f;
  color: white;
  font-weight: 600;
  margin-top: 20px;
  width: 80%;
  align-self: center;
}

button[type="submit"]:hover {
  cursor: pointer;
  background-color: #455864;
}

@media only screen and (min-width: 2100px) {
  body {
    width: 85%;
  }

  header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
  }

  header h1 {
    font-size: 4.5rem;
  }

  #content.about {
    padding: 20px 30px;
  }
}

@media only screen and (min-width: 1700px) {
  .gallery {
    display: flex;
    flex-direction: row;
    height: 35vh;
    gap: 50px;
  }

  .gallery img {
    border-radius: 20px;
    height: 100%;
    width: auto;
  }

  #reservation-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 50%;
    padding: 20px;
  }

  #reservation-form .form-entry {
    display: flex;
    flex-direction: column;
    gap: 10px;
    margin: 10px;
  }

  button[type="submit"] {
    width: 40%;
  }
}

